--- a/index.html
+++ b/index.html
@@ -64,7 +64,31 @@
     <section>
       <h2>She invents</h2>
     </section>
-
+     <br />
+    <section class="contact">
+      <h3>Contact me</h3>
+      <br />
+      <p>Total visitors : <span id="visitor">0</span></p>
+      <form action="">
+        <fieldset>
+          <div class="name1">
+            <label for="name">Name:</label>
+            <input type="text" id="name" />
+          </div>
+          <div class="email1">
+            <br /><br />
+            <label for="email">Email:</label>
+            <input type="email" id="email" /><br /><br />
+          </div>
+          <div class="msg1">
+            <label for="message">Message:</label>
+            <textarea id="message" rows="4" cols="40"></textarea><br />
+          </div>
+          <br />
+          <button id="button2" type="submit">Send message</button>
+        </fieldset>
+      </form>
+    </section>
     <footer>&copy; Sunayda 2025<br /></footer>
     <script src="java.js"></script>
     <script>
